<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <GVL Name="DataExchange" Id="{5efe0d96-5a4c-463c-a6f6-696f65a50846}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	spawnRate: REAL := 2;
	boxSpeed: REAL := 3;
	runBelt: BOOL := TRUE;
	autoDirection: BOOL := TRUE;
	direction: DINT := 0; //0 = left , else = right
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>